; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvme/target/extr_core.c_nvmet_req_uninit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvme/target/extr_core.c_nvmet_req_uninit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvmet_req = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nvmet_req_uninit(%struct.nvmet_req* %0) #0 {
  %2 = alloca %struct.nvmet_req*, align 8
  store %struct.nvmet_req* %0, %struct.nvmet_req** %2, align 8
  %3 = load %struct.nvmet_req*, %struct.nvmet_req** %2, align 8
  %4 = getelementptr inbounds %struct.nvmet_req, %struct.nvmet_req* %3, i32 0, i32 1
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = call i32 @percpu_ref_put(i32* %6)
  %8 = load %struct.nvmet_req*, %struct.nvmet_req** %2, align 8
  %9 = getelementptr inbounds %struct.nvmet_req, %struct.nvmet_req* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load %struct.nvmet_req*, %struct.nvmet_req** %2, align 8
  %14 = getelementptr inbounds %struct.nvmet_req, %struct.nvmet_req* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = call i32 @nvmet_put_namespace(i64 %15)
  br label %17

17:                                               ; preds = %12, %1
  ret void
}

declare dso_local i32 @percpu_ref_put(i32*) #1

declare dso_local i32 @nvmet_put_namespace(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
